--- a/Rx.NET/Source/System.Reactive.Interfaces/project.json
+++ b/Rx.NET/Source/System.Reactive.Interfaces/project.json
@@ -41,7 +41,7 @@
                 ]
             }
         },
-        "dotnet5.1": {
+        "netstandard1.0": {
             "compilationOptions": {
                 "define": [
                     "NO_EVENTARGS_CONSTRAINT",
@@ -61,12 +61,12 @@
                 ]
             },
             "dependencies": {
-                "System.Diagnostics.Tools": "4.0.1-rc3-23823",
-                "System.Linq": "4.0.1-rc3-23823",
-                "System.Linq.Expressions": "4.0.11-rc3-23823",
-                "System.Resources.ResourceManager": "4.0.1-rc3-23823",
-                "System.Runtime": "4.1.0-rc3-23823",
-                "System.Threading": "4.0.11-rc3-23823"
+                "System.Diagnostics.Tools": "4.0.1-rc2-23904",
+                "System.Linq": "4.0.1-rc2-23904",
+                "System.Linq.Expressions": "4.0.11-rc2-23904",
+                "System.Resources.ResourceManager": "4.0.1-rc2-23904",
+                "System.Runtime": "4.1.0-rc2-23904",
+                "System.Threading": "4.0.11-rc2-23904"
             }
         }
     }
