--- a/Rx.NET/Source/System.Reactive.Observable.Aliases/project.json
+++ b/Rx.NET/Source/System.Reactive.Observable.Aliases/project.json
@@ -65,7 +65,7 @@
                 ]
             }
         },
-        "dotnet5.1": {
+        "netstandard1.0": {
             "compilationOptions": {
                 "define": [
                     "NO_EVENTARGS_CONSTRAINT",
@@ -87,7 +87,7 @@
             "dependencies": {
             }
         },
-        "dotnet5.4": {
+        "netstandard1.3": {
             "compilationOptions": {
                 "define": [
                     "NO_EVENTARGS_CONSTRAINT",
