--- a/Ix.NET/Source/System.Interactive.Async.Providers/project.json
+++ b/Ix.NET/Source/System.Interactive.Async.Providers/project.json
@@ -32,20 +32,21 @@
                 ]
             }
         },
-        "netstandard1.0": {
-            "compilationOptions": {
-                "define": [
-                    "HAS_AWAIT",
-                    "CRIPPLED_REFLECTION",
-                    "PLIB"
-                ]
-            },
-            "dependencies": {
-                "System.Linq.Expressions": "4.0.11-rc2-23904",
-                "System.Linq.Queryable": "4.0.1-rc2-23904",
-                "System.Reflection": "4.1.0-rc2-23904"
-            }
-
+      "netstandard1.0": {
+        "compilationOptions": {
+          "define": [
+            "HAS_AWAIT",
+            "CRIPPLED_REFLECTION",
+            "PLIB"
+          ]
+        },
+        "imports": [ "dnxcore50", "portable-net45+win8" ],
+        "dependencies": {
+          "System.Linq.Expressions": "4.0.11-rc2-23811",
+          "System.Linq.Queryable": "4.0.1-rc2-23811",
+          "System.Reflection": "4.1.0-rc2-23811"
         }
+
+      }
     }
 }
