--- a/Ix.NET/Source/System.Interactive.Async/project.json
+++ b/Ix.NET/Source/System.Interactive.Async/project.json
@@ -30,22 +30,18 @@
                 ]
             }
         },
-        "netstandard1.0": {
-            "compilationOptions": {
-                "define": [
-                    "HAS_AWAIT",
-                    "CRIPPLED_REFLECTION",
-                    "PLIB"
-                ]
-            },
-            "dependencies": {
-                "System.Diagnostics.Debug": "4.0.11-rc2-23904",
-                "System.Linq": "4.0.1-rc2-23904",
-                "System.Runtime.Extensions": "4.1.0-rc2-23904",
-                "System.Resources.ResourceManager": "4.0.1-rc2-23904",
-                "System.Runtime": "4.1.0-rc2-23904",
-                "System.Threading": "4.0.11-rc2-23904"
-            }
+      "netstandard1.0": {
+        "compilationOptions": {
+          "define": [
+            "HAS_AWAIT",
+            "CRIPPLED_REFLECTION",
+            "PLIB"
+          ]
+        },
+        "imports": [ "dnxcore50", "portable-net45+win8" ],
+        "dependencies": {
+          "NETStandard.Library": "1.0.0-rc2-23811"
         }
+      }
     }
 }
