--- a/Ix.NET/Source/System.Interactive/project.json
+++ b/Ix.NET/Source/System.Interactive/project.json
@@ -1,50 +1,46 @@
 ﻿{
-    "version": "2.0.0-*",
-    "title": "Interactive Extensions - Main Library",
-    "description": "Interactive Extensions Main Library used to express queries over enumerable sequences.",
-    "authors": [ "Microsoft" ],
-    "copyright": "Copyright (C) Microsoft Corporation",
-    "tags": [ "Ix", "Interactive", "Extensions", "Enumerable" ],
-    "iconUrl": "http://go.microsoft.com/fwlink/?LinkId=261274",
-    "projectUrl": "https://github.com/Reactive-Extensions/Rx.NET",
-    "licenseUrl": "https://raw.githubusercontent.com/Reactive-Extensions/Rx.NET/master/Ix.NET/Source/license.txt",
-    "requireLicenseAcceptance": true,
-    "frameworks": {
-        "net40": {
-            "compilationOptions": {
-                "define": [
-                    "HAS_APTCA",
-                    "DESKTOPCLR",
-                    "DESKTOPCLR40"
-                ]
-            }
-        },
-        "net45": {
-            "compilationOptions": {
-                "define": [
-                    "HAS_AWAIT",
-                    "HAS_APTCA",
-                    "DESKTOPCLR",
-                    "DESKTOPCLR45"
-                ]
-            }
-        },
-        "netstandard1.0": {
-            "compilationOptions": {
-                "define": [
-                    "HAS_AWAIT",
-                    "CRIPPLED_REFLECTION",
-                    "PLIB"
-                ]
-            },
-            "dependencies": {
-                "System.Diagnostics.Debug": "4.0.11-rc2-23904",
-                "System.Linq": "4.0.1-rc2-23904",
-                "System.Resources.ResourceManager": "4.0.1-rc2-23904",
-                "System.Runtime": "4.1.0-rc2-23904",
-                "System.Threading": "4.0.11-rc2-23904"
-            }
-
-        }
+  "version": "2.0.0-*",
+  "title": "Interactive Extensions - Main Library",
+  "description": "Interactive Extensions Main Library used to express queries over enumerable sequences.",
+  "authors": [ "Microsoft" ],
+  "copyright": "Copyright (C) Microsoft Corporation",
+  "tags": [ "Ix", "Interactive", "Extensions", "Enumerable" ],
+  "iconUrl": "http://go.microsoft.com/fwlink/?LinkId=261274",
+  "projectUrl": "https://github.com/Reactive-Extensions/Rx.NET",
+  "licenseUrl": "https://raw.githubusercontent.com/Reactive-Extensions/Rx.NET/master/Ix.NET/Source/license.txt",
+  "requireLicenseAcceptance": true,
+  "frameworks": {
+    "net40": {
+      "compilationOptions": {
+        "define": [
+          "HAS_APTCA",
+          "DESKTOPCLR",
+          "DESKTOPCLR40"
+        ]
+      }
+    },
+    "net45": {
+      "compilationOptions": {
+        "define": [
+          "HAS_AWAIT",
+          "HAS_APTCA",
+          "DESKTOPCLR",
+          "DESKTOPCLR45"
+        ]
+      }
+    },
+    "netstandard1.0": {
+      "compilationOptions": {
+        "define": [
+          "HAS_AWAIT",
+          "CRIPPLED_REFLECTION",
+          "PLIB"
+        ]
+      },
+      "imports": [ "dnxcore50", "portable-net45+win8" ],
+      "dependencies": {
+        "NETStandard.Library": "1.0.0-rc2-23811"
+      }
     }
+  }
 }
