--- a/Rx.NET/Source/System.Reactive.Experimental/project.json
+++ b/Rx.NET/Source/System.Reactive.Experimental/project.json
@@ -68,6 +68,7 @@
             }
         },
         "netstandard1.0": {
+            "imports": [ "dotnet5.1" ],
             "compilationOptions": {
                 "define": [
                     "NO_EVENTARGS_CONSTRAINT",
@@ -90,6 +91,7 @@
             }
         },
         "netstandard1.3": {
+            "imports": [ "dotnet5.4" ],
             "compilationOptions": {
                 "define": [
                     "NO_EVENTARGS_CONSTRAINT",
