--- a/Rx.NET/Source/System.Reactive.Interfaces/project.json
+++ b/Rx.NET/Source/System.Reactive.Interfaces/project.json
@@ -42,6 +42,7 @@
             }
         },
         "netstandard1.0": {
+            "imports": [ "dotnet5.1" ],
             "compilationOptions": {
                 "define": [
                     "NO_EVENTARGS_CONSTRAINT",
@@ -61,12 +62,12 @@
                 ]
             },
             "dependencies": {
-                "System.Diagnostics.Tools": "4.0.1-rc2-23904",
-                "System.Linq": "4.0.1-rc2-23904",
-                "System.Linq.Expressions": "4.0.11-rc2-23904",
-                "System.Resources.ResourceManager": "4.0.1-rc2-23904",
-                "System.Runtime": "4.1.0-rc2-23904",
-                "System.Threading": "4.0.11-rc2-23904"
+                "System.Diagnostics.Tools": "4.0.1-rc2-23811",
+                "System.Linq": "4.0.1-rc2-23811",
+                "System.Linq.Expressions": "4.0.11-rc2-23811",
+                "System.Resources.ResourceManager": "4.0.1-rc2-23811",
+                "System.Runtime": "4.1.0-rc2-23811",
+                "System.Threading": "4.0.11-rc2-23811"
             }
         }
     }
