--- a/Rx.NET/Source/System.Reactive.Observable.Aliases/project.json
+++ b/Rx.NET/Source/System.Reactive.Observable.Aliases/project.json
@@ -66,6 +66,7 @@
             }
         },
         "netstandard1.0": {
+            "imports": [ "dotnet5.1" ],
             "compilationOptions": {
                 "define": [
                     "NO_EVENTARGS_CONSTRAINT",
@@ -88,6 +89,7 @@
             }
         },
         "netstandard1.3": {
+            "imports": [ "dotnet5.4" ],
             "compilationOptions": {
                 "define": [
                     "NO_EVENTARGS_CONSTRAINT",
