--- a/Rx.NET/Source/System.Reactive.WindowsRuntime/project.json
+++ b/Rx.NET/Source/System.Reactive.WindowsRuntime/project.json
@@ -14,37 +14,39 @@
     "System.Reactive.Linq": { "target": "project" }
   },
 
-  "frameworks": {
-    "netstandard1.1": {
-        "imports": [ "dotnet5.2" ],
-        "compilationOptions": {
-            "define": [
-                "NO_EVENTARGS_CONSTRAINT",
-                "HAS_EDI",
-                "HAS_WINRT",
-                "HAS_PROGRESS",
-                "PREFER_ASYNC",
-                "HAS_AWAIT",
-                "NO_REMOTING",
-                "NO_SERIALIZABLE",
-                "NO_THREAD",
-                "CRIPPLED_REFLECTION",
-                "USE_TIMER_SELF_ROOT"
-            ]
-        },
-        "dependencies": {
-            "Microsoft.NETCore.Portable.Compatibility": {
-                "version": "1.0.0",
-                "type": "build"
+    "frameworks": {
+        ".NETPortable,Version=v4.6,Profile=Profile32": {
+            "imports": ["dotnet5.2"],
+            "compilationOptions": {
+                "define": [
+                    "NO_EVENTARGS_CONSTRAINT",
+                    "HAS_EDI",
+                    "HAS_WINRT",
+                    "HAS_PROGRESS",
+                    "PREFER_ASYNC",
+                    "HAS_AWAIT",
+                    "NO_REMOTING",
+                    "NO_SERIALIZABLE",
+                    "NO_THREAD",
+                    "CRIPPLED_REFLECTION",
+                    "USE_TIMER_SELF_ROOT",
+                    "WINDOWS",
+                    "WINDOWS81"
+                ]
             },
-            "Microsoft.TargetingPack.Private.WinRT": {
-                "version": "1.0.1",
-                "type": "build"
-            },
-            "System.Threading.Tasks": "4.0.11-rc2-23811",
-            "System.Runtime.WindowsRuntime": "4.0.11-rc2-23811"
-        }
+            "dependencies": {
+                "Microsoft.NETCore.Portable.Compatibility": {
+                    "version": "1.0.0",
+                    "type": "build"
+                },
+                "Microsoft.TargetingPack.Private.WinRT": {
+                    "version": "1.0.1",
+                    "type": "build"
+                },
+                "System.Threading.Tasks": "4.0.11-rc2-23811",
+                "System.Runtime.WindowsRuntime": "4.0.11-rc2-23811"
+            }
 
+        }
     }
-  }
 }
