--- a/Rx.NET/Source/System.Reactive.PlatformServices/project.json
+++ b/Rx.NET/Source/System.Reactive.PlatformServices/project.json
@@ -112,6 +112,36 @@
             "dependencies": {
                 "NETStandard.Library": "1.0.0-rc2-23811"
             }
+        },
+        ".NETPortable,Version=v4.6,Profile=Profile32": {
+            "imports": [ "dotnet5.2" ],
+            "compilationOptions": {
+                "define": [
+                    "NO_EVENTARGS_CONSTRAINT",
+                    "HAS_EDI",
+                    "HAS_WINRT",
+                    "HAS_PROGRESS",
+                    "PREFER_ASYNC",
+                    "HAS_AWAIT",
+                    "NO_REMOTING",
+                    "NO_SERIALIZABLE",
+                    "NO_THREAD",
+                    "CRIPPLED_REFLECTION",
+                    "USE_TIMER_SELF_ROOT",
+                    "WINDOWS",
+                    "WINDOWS81"
+                ]
+            },
+            "dependencies": {
+                "Microsoft.NETCore.Portable.Compatibility": {
+                    "version": "1.0.0",
+                    "type": "build"
+                },
+                "Microsoft.TargetingPack.Private.WinRT": {
+                    "version": "1.0.1",
+                    "type": "build"
+                }
+            }
         }
     }
 }
