--- a/Rx.NET/Source/System.Reactive.Core/project.json
+++ b/Rx.NET/Source/System.Reactive.Core/project.json
@@ -124,6 +124,26 @@
                 "System.Threading.ThreadPool": "4.0.10-rc2-23811",
                 "System.Threading.Timer": "4.0.1-rc2-23811"
             }
+        },
+        "sl5": {
+            "compilationOptions": {
+                "define": [
+                    "NO_RXINTERFACES",
+                    "USE_SL_DISPATCHER",
+                    "NO_SERIALIZABLE",
+                    "NO_REMOTING",
+                    "NO_SEMAPHORE",
+                    "NO_STOPWATCH",
+                    "NO_CDS",
+                    "NO_TASK_DELAY",
+                    "NO_WEAKREFOFT",
+                    "NO_SORTEDDICTIONARY",
+                    "SILVERLIGHT",
+                    "SILVERLIGHT5"
+                ]
+            },
+            "dependencies": {
+            }
         }
     }
 }
