--- a/Rx.NET/Source/System.Reactive.PlatformServices/project.json
+++ b/Rx.NET/Source/System.Reactive.PlatformServices/project.json
@@ -142,6 +142,26 @@
                     "type": "build"
                 }
             }
+        },
+        "sl5": {
+            "compilationOptions": {
+                "define": [
+                    "NO_RXINTERFACES",
+                    "USE_SL_DISPATCHER",
+                    "NO_SERIALIZABLE",
+                    "NO_REMOTING",
+                    "NO_SEMAPHORE",
+                    "NO_STOPWATCH",
+                    "NO_CDS",
+                    "NO_TASK_DELAY",
+                    "NO_WEAKREFOFT",
+                    "NO_SORTEDDICTIONARY",
+                    "SILVERLIGHT",
+                    "SILVERLIGHT5"
+                ]
+            },
+            "dependencies": {
+            }
         }
     }
 }
