--- a/Rx.NET/Source/System.Reactive.Providers/project.json
+++ b/Rx.NET/Source/System.Reactive.Providers/project.json
@@ -46,7 +46,7 @@
                 ]
             },
             "dependencies": {
-               
+
             }
         },
         "net46": {
@@ -114,6 +114,26 @@
             },
             "dependencies": {
                 "System.Linq.Queryable": "4.0.1-rc2-23811"
+            }
+        },
+        "sl5": {
+            "compilationOptions": {
+                "define": [
+                    "NO_RXINTERFACES",
+                    "USE_SL_DISPATCHER",
+                    "NO_SERIALIZABLE",
+                    "NO_REMOTING",
+                    "NO_SEMAPHORE",
+                    "NO_STOPWATCH",
+                    "NO_CDS",
+                    "NO_TASK_DELAY",
+                    "NO_WEAKREFOFT",
+                    "NO_SORTEDDICTIONARY",
+                    "SILVERLIGHT",
+                    "SILVERLIGHT5"
+                ]
+            },
+            "dependencies": {
             }
         }
     }
