--- a/Rx.NET/Source/System.Reactive.Linq/project.json
+++ b/Rx.NET/Source/System.Reactive.Linq/project.json
@@ -105,6 +105,7 @@
                     "HAS_EDI",
                     "HAS_WINRT",
                     "HAS_PROGRESS",
+                    "HAS_TPL46",
                     "PREFER_ASYNC",
                     "HAS_AWAIT",
                     "HAS_APTCA",
