Enable platform services to build for win81 and wpa81

--- a/Rx.NET/Source/System.Reactive.PlatformServices/project.json
+++ b/Rx.NET/Source/System.Reactive.PlatformServices/project.json
@@ -114,7 +114,7 @@
                 "NETStandard.Library": "1.0.0-rc2-23811"
             }
         },
-        ".NETPortable,Version=v4.6,Profile=Profile32": {
+        "wpa81": {
             "imports": [ "dotnet5.2" ],
             "compilationOptions": {
                 "define": [
@@ -134,14 +134,69 @@
                 ]
             },
             "dependencies": {
-                "Microsoft.NETCore.Portable.Compatibility": {
-                    "version": "1.0.0",
-                    "type": "build"
-                },
                 "Microsoft.TargetingPack.Private.WinRT": {
                     "version": "1.0.1",
                     "type": "build"
+                },
+                "Microsoft.TargetingPack.Private.WindowsPhone.v.8.1": {
+                    "version": "1.0.0",
+                    "type": "build"
                 }
+            }
+        },
+        "win81": {
+            "imports": [ "dotnet5.2" ],
+            "compilationOptions": {
+                "define": [
+                    "NO_EVENTARGS_CONSTRAINT",
+                    "HAS_EDI",
+                    "HAS_WINRT",
+                    "HAS_PROGRESS",
+                    "PREFER_ASYNC",
+                    "HAS_AWAIT",
+                    "NO_REMOTING",
+                    "NO_SERIALIZABLE",
+                    "NO_THREAD",
+                    "CRIPPLED_REFLECTION",
+                    "USE_TIMER_SELF_ROOT",
+                    "WINDOWS",
+                    "WINDOWS81"
+                ]
+            },
+            "dependencies": {
+                "Microsoft.TargetingPack.Private.WinRT": {
+                    "version": "1.0.1",
+                    "type": "build"
+                },
+                "Microsoft.TargetingPack.Private.NETCore.v4.5.1": {
+                    "version": "1.0.0",
+                    "type": "build"
+                }
+            }
+
+        },
+        "uap10.0": {
+            "imports": [ "dotnet5.4" ],
+            "compilationOptions": {
+                "define": [
+                    "NO_EVENTARGS_CONSTRAINT",
+                    "HAS_EDI",
+                    "HAS_WINRT",
+                    "HAS_PROGRESS",
+                    "PREFER_ASYNC",
+                    "HAS_AWAIT",
+                    "HAS_APTCA",
+                    "HAS_TPL46",
+                    "NO_REMOTING",
+                    "NO_SERIALIZABLE",
+                    "NO_THREAD",
+                    "CRIPPLED_REFLECTION",
+                    "PLIB",
+                    "USE_TIMER_SELF_ROOT"
+                ]
+            },
+            "dependencies": {
+                "NETStandard.Library": "1.0.0-rc2-23811"
             }
         },
         "sl5": {
