--- a/Rx.NET/Source/System.Reactive.PlatformServices/project.json
+++ b/Rx.NET/Source/System.Reactive.PlatformServices/project.json
@@ -191,12 +191,19 @@
                     "NO_SERIALIZABLE",
                     "NO_THREAD",
                     "CRIPPLED_REFLECTION",
-                    "PLIB",
+                    "WINDOWS",
                     "USE_TIMER_SELF_ROOT"
                 ]
             },
             "dependencies": {
-                "NETStandard.Library": "1.0.0-rc2-23811"
+                "Microsoft.TargetingPack.Private.WinRT": {
+                    "version": "1.0.1",
+                    "type": "build"
+                },
+                "Microsoft.NETCore.UniversalWindowsPlatform": {
+                    "version": "5.1.0-rc2-23811",
+                    "type": "build"
+                }
             }
         },
         "sl5": {
