--- a/Ix.NET/Source/System.Interactive.Providers/project.json
+++ b/Ix.NET/Source/System.Interactive.Providers/project.json
@@ -12,40 +12,55 @@
   "dependencies": {
     "System.Interactive": { "target": "project" }
   },
-  "frameworks": {
-    "net40": {
-      "compilationOptions": {
-        "define": [
-          "HAS_APTCA",
-          "DESKTOPCLR",
-          "DESKTOPCLR40"
-        ]
-      }
-    },
-    "net45": {
-      "compilationOptions": {
-        "define": [
-          "HAS_AWAIT",
-          "HAS_APTCA",
-          "DESKTOPCLR",
-          "DESKTOPCLR45"
-        ]
-      }
-    },
-    "netstandard1.0": {
-      "compilationOptions": {
-        "define": [
-          "HAS_AWAIT",
-          "CRIPPLED_REFLECTION",
-          "PLIB"
-        ]
-      },
-      "imports": [ "dnxcore50", "portable-net45+win8" ],
-      "dependencies": {
-        "System.Linq.Expressions": "4.0.11-rc2-23811",
-        "System.Linq.Queryable": "4.0.1-rc2-23811",
-        "System.Reflection": "4.1.0-rc2-23811"
-      }
+    "frameworks": {
+        "net40": {
+            "compilationOptions": {
+                "define": [
+                    "HAS_APTCA",
+                    "DESKTOPCLR",
+                    "DESKTOPCLR40"
+                ]
+            }
+        },
+        "net45": {
+            "compilationOptions": {
+                "define": [
+                    "HAS_AWAIT",
+                    "HAS_APTCA",
+                    "DESKTOPCLR",
+                    "DESKTOPCLR45"
+                ]
+            }
+        },
+        "netstandard1.0": {
+            "compilationOptions": {
+                "define": [
+                    "HAS_AWAIT",
+                    "CRIPPLED_REFLECTION",
+                    "PLIB"
+                ]
+            },
+            "imports": [ "dnxcore50", "portable-net45+win8" ],
+            "dependencies": {
+                "System.Linq.Expressions": "4.0.11-rc2-23811",
+                "System.Linq.Queryable": "4.0.1-rc2-23811",
+                "System.Reflection": "4.1.0-rc2-23811"
+            }
+        },
+        "sl5": {
+            "compilationOptions": {
+                "define": [
+                    "NO_SERIALIZABLE",
+                    "NO_TPL",
+                    "NO_REMOTING",
+                    "NO_SEMAPHORE",
+                    "NO_RXINTERFACES",
+                    "SILVERLIGHT",
+                    "SILVERLIGHT5"
+                ]
+            },
+            "dependencies": {
+            }
+        }
     }
-  }
 }
