--- a/Rx.NET/Source/System.Reactive.Core/project.json
+++ b/Rx.NET/Source/System.Reactive.Core/project.json
@@ -9,7 +9,11 @@
     "projectUrl": "http://go.microsoft.com/fwlink/?LinkId=261273",
     "licenseUrl": "http://go.microsoft.com/fwlink/?LinkID=261272",
     "requireLicenseAcceptance": true,
-
+    "compilationOptions": {
+        "keyFile": "../35MSSharedLib1024.snk",
+        "publicSign": true,
+        "define": [ "SIGNED" ]
+    },
     "dependencies": {
         "System.Reactive.Interfaces": { "target": "project" }
     },
