--- a/Rx.NET/Source/System.Reactive.Windows.Forms/project.json
+++ b/Rx.NET/Source/System.Reactive.Windows.Forms/project.json
@@ -1,15 +1,19 @@
 ﻿{
     "version": "3.0.0-*",
     "title": "Reactive Extensions - Windows Forms Helpers",
-    "description":
-        "Windows Forms extensions library for Rx. Contains scheduler functionality for the Windows Forms UI loop.",
-    "authors": ["Microsoft"],
+    "description": "Windows Forms extensions library for Rx. Contains scheduler functionality for the Windows Forms UI loop.",
+    "authors": [ "Microsoft" ],
     "copyright": "Copyright (C) Microsoft Corporation",
-    "tags": ["Rx", "Reactive", "Extensions", "Observable", "LINQ", "Events"],
+    "tags": [ "Rx", "Reactive", "Extensions", "Observable", "LINQ", "Events" ],
     "iconUrl": "http://go.microsoft.com/fwlink/?LinkId=261274",
     "projectUrl": "http://go.microsoft.com/fwlink/?LinkId=261273",
     "licenseUrl": "http://go.microsoft.com/fwlink/?LinkID=261272",
     "requireLicenseAcceptance": true,
+    "compilationOptions": {
+        "keyFile": "../35MSSharedLib1024.snk",
+        "publicSign": true,
+        "define": [ "SIGNED" ]
+    },
 
     "dependencies": {
         "System.Reactive.Interfaces": { "target": "project" },
